--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=pms
-spring.datasource.url=jdbc:mysql://localhost:3306/pms
+spring.datasource.url=jdbc:mysql://localhost:5506/tiny_pms
 spring.datasource.username=root
 spring.datasource.password=pass
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.database=MYSQL
 spring.jpa.hibernate.ddl-auto=update
 spring.docker.compose.enabled=false
+server.port=9090
